# CUDA_101

./: occupancy_calculator.cu  thread_id_calculator.cu
Ch01/: exec_config_test.cu  grid_stride_benchmark.cu  host_device_roles.cu
Ch02/: bank_conflict_benchmark.cu  cuda-streams-example.cu  matmul_optimized.cu  reduction_sync.cu  scan_blelloch.cu  scan_hillis_steele.cu  stream_compaction.cu  syncthreads_demo.cu
Ch05/cnn/: CMakeLists.txt  Makefile  example.cu
Ch05/cnn/include/: layers.h  network.h  tensor.h
Ch05/cnn/src/: main.cu
Ch05/cnn/src/kernels/: activation.cu  convolution.cu  normalization.cu  pooling.cu
Ch05/cnn/src/utils/: cuda_utils.h  tensor_utils.h
Ch05/stream/: CMakeLists.txt  Makefile  example_main.cu
Ch05/stream/include/: image_pipeline.h  pipeline.h
Ch05/stream/src/: main.cu  simple_main.cu
Ch05/stream/src/kernels/: color_space.cu  filters.cu  kernel_launchers.cu
